--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,23 +9,30 @@
 @import './sidebar.scss';
 @import './toolbar.scss';
 @import './section.scss';
+@import './issue.scss';
 .empty-page {
   width: 100vw;
   height: 100vh;
   background-color: $grey-dark;
 }
-.main-page {
+.landing {
   display: flex;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  position: relative;
   background-color: $grey-dark;
+
   &__container {
+    position: absolute;
+    top: 0;
+    right: 0;
     display: flex;
     flex-direction: column;
     width: calc(100% - 250px);
   }
 }
-
+.main-page {
+}
 *::-webkit-scrollbar {
   -webkit-appearance: none;
   height: 7px;
