--- a/src/style/sidebar.scss
+++ b/src/style/sidebar.scss
@@ -3,6 +3,9 @@
   width: 100%;
   max-width: 250px;
   min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
   &__logo {
     display: block;
     width: calc(100% - 50px);
