--- a/src/style/sidebar.scss
+++ b/src/style/sidebar.scss
@@ -24,7 +24,7 @@
     height: 40px;
     color: $white;
     font-size: 20px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     align-items: center;
     padding-left: 20px;
     color: $white;
