--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -25,7 +25,7 @@ $green: #2ecc40;
 $lime: #01ff70;
 
 $roboto: Roboto, sans-serif;
-$rubik: Roboto, sans-serif;
+$rubik: Rubik, sans-serif;
 $small: '576px';
 $medium: '768px';
 $large: '992px';
