--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -12,6 +12,9 @@
   &--m-left {
     margin-left: 15px;
   }
+  &--m-top {
+    margin-top: 15px;
+  }
   &--disabled {
     background-color: $grey;
     color: $white;
