--- a/src/style/textarea.scss
+++ b/src/style/textarea.scss
@@ -1,5 +1,5 @@
 .textarea {
-  background-color: $grey-b;
+  background-color: $white;
   padding: 12px 16px;
   resize: none;
   overflow: auto;
@@ -13,6 +13,7 @@
   color: $navy;
   font-family: $roboto;
   width: 100%;
+
   &:focus-visible {
     outline: none;
     border: solid 1px $navy;
@@ -20,5 +21,8 @@
   ::placeholder {
     font-family: $roboto;
     color: $grey;
+  }
+  &--error {
+    border: solid 1px $red;
   }
 }
