--- a/src/style/issue.scss
+++ b/src/style/issue.scss
@@ -7,8 +7,7 @@
   overflow: hidden;
   background-color: $white;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  margin-left: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   &__image {
     width: 100%;
     height: 190px;
@@ -79,11 +78,19 @@
   padding: 16px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   &__images-icon {
-    font-size: 100px;
+    font-size: 75px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
   }
   input[type='file'] {
     display: none;
+  }
+  &__take-photo,
+  &__label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   &__images {
     display: flex;
