--- a/src/style/section.scss
+++ b/src/style/section.scss
@@ -15,28 +15,38 @@
     &--space-between {
       justify-content: space-between;
     }
+    @media screen and (max-width: 450px) {
+      flex-direction: column-reverse;
+      align-items: flex-end;
+      input {
+        margin-bottom: 15px;
+      }
+    }
   }
   &__body {
     margin-top: 20px;
     &--issues {
-      margin-left: -30px;
       display: grid;
-      grid-template-columns: repeat(5, calc(20% - 30px));
-      column-gap: 30px;
+      justify-content: space-between;
+      grid-template-columns: repeat(5, calc(20% - 15px));
+      column-gap: 15px;
       @media screen and (max-width: 1900px) {
-        grid-template-columns: repeat(4, calc(25% - 30px));
+        grid-template-columns: repeat(4, calc(25% - 15px));
       }
       @media screen and (max-width: 1500px) {
-        grid-template-columns: repeat(3, calc(33.33% - 30px));
+        grid-template-columns: repeat(3, calc(33.33% - 15px));
       }
       @media screen and (max-width: 1100px) {
-        grid-template-columns: repeat(2, calc(50% - 30px));
+        grid-template-columns: repeat(2, calc(50% - 15px));
       }
       @media screen and (max-width: 500px) {
         grid-template-columns: 100%;
         column-gap: 0;
       }
     }
+  }
+  @media screen and (max-width: 800px) {
+    padding: 0 5px;
   }
 }
 
@@ -58,6 +68,7 @@
     margin: 0 auto;
     grid-template-columns: 25% 30% 25% 20%;
     margin-bottom: 10px;
+    font-weight: 700;
   }
   &__row {
     &:nth-child(2n) {
