--- a/src/style/modal.scss
+++ b/src/style/modal.scss
@@ -26,6 +26,12 @@
     animation-duration: 0.4s;
     overflow: auto;
     padding: 16px;
+    &--map {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__header {
