--- a/src/style/issue.scss
+++ b/src/style/issue.scss
@@ -134,3 +134,71 @@
     text-align: center;
   }
 }
+
+.issue-page {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 8px;
+  background-color: $white;
+  padding: 16px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  &__body {
+    display: flex;
+  }
+  &__data {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25px;
+  }
+}
+
+.slider {
+  display: flex;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  &__main-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  &__left-icon,
+  &__right-icon {
+    position: absolute;
+    top: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    background-color: $white;
+    border-radius: 50%;
+    transform: translate(0, -50%);
+  }
+  &__left-icon {
+    left: 0;
+  }
+  &__right-icon {
+    right: 0;
+  }
+  &__points {
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    color: $white;
+    transform: translate(-50%, 0);
+  }
+  &__point {
+    &--active {
+      color: $black;
+    }
+    cursor: pointer;
+  }
+
+  &__data {
+    display: flex;
+    flex-direction: column;
+  }
+}
