--- a/src/style/section.scss
+++ b/src/style/section.scss
@@ -25,6 +25,11 @@
   }
   &__body {
     margin-top: 20px;
+    &--stat {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -20px;
+    }
     &--issues {
       display: grid;
       justify-content: space-between;
@@ -90,5 +95,41 @@
     overflow: hidden;
     text-overflow: ellipsis;
     padding-left: 5px;
+  }
+}
+
+.stat-card {
+  display: flex;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  overflow: hidden;
+  align-items: center;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  &__icon {
+    background-color: $black;
+    width: 85px;
+    height: 85px;
+    color: $white;
+    padding: 10px;
+  }
+  &__content {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    text-align: center;
+  }
+  &__title {
+    font-size: 20px;
+    font-weight: 700;
+    font-family: $rubik;
+    color: $black;
+  }
+  &__info {
+    font-size: 30px;
+    font-weight: 700;
+    font-family: $roboto;
+    color: $black;
+    margin-top: 5px;
   }
 }
