--- a/src/style/section.scss
+++ b/src/style/section.scss
@@ -2,6 +2,11 @@
   width: 100%;
   min-height: 100%;
   padding: 0 30px 30px 30px;
+  &--map {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
   &__title {
     font-size: 24px;
     font-weight: 700;
