--- a/src/style/section.scss
+++ b/src/style/section.scss
@@ -30,11 +30,6 @@
   }
   &__body {
     margin-top: 20px;
-    &--stat {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: -20px;
-    }
     &--issues {
       display: grid;
       justify-content: space-between;
@@ -112,7 +107,7 @@
   margin-left: 20px;
   margin-bottom: 20px;
   &__icon {
-    background-color: $black;
+    background-color: $grey-3;
     width: 85px;
     height: 85px;
     color: $white;
@@ -123,6 +118,7 @@
     flex-direction: column;
     padding: 15px;
     text-align: center;
+    margin: 0 auto;
   }
   &__title {
     font-size: 20px;
