--- a/src/style/issue.scss
+++ b/src/style/issue.scss
@@ -147,6 +147,7 @@
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   &__body {
     display: flex;
+    justify-content: center;
   }
   &__data {
     display: flex;
@@ -157,8 +158,8 @@
 
 .slider {
   display: flex;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 500px;
   position: relative;
   &__main-image {
     width: 100%;
