--- a/src/style/map.scss
+++ b/src/style/map.scss
@@ -22,6 +22,8 @@
     width: 100px;
     min-height: 100px;
     color: red;
-    font-size: 16px;
+    font-size: 44px;
+    margin-top: -21px;
+    margin-left: -10px;
   }
 }
