--- a/src/style/toolbar.scss
+++ b/src/style/toolbar.scss
@@ -5,11 +5,12 @@
   background-color: $grey-dark;
   align-items: center;
   justify-content: flex-end;
+  padding-right: 30px;
   &__item {
     color: $black;
     text-transform: capitalize;
     text-decoration: none;
-    margin-right: 20px;
+    margin-left: 20px;
     display: flex;
 
     align-items: center;
